feat(submodule): 添加并配置新的子模块及同步脚本- 添加 UltiCode-Admin-Web 子模块及其分支配置 - 在主仓库及 UltiCode-Admin-API 中添加 branch = main 配置- 新增 sync-all-submodules.sh 脚本用于递归同步所有子模块 - 实现对多层嵌套子模块的统一更新、提交与推送流程- 自动化子模块同步操作，提升开发环境一致性 - 添加执行权限确保脚本可直接运行

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
 [submodule "UltiCode-Admin-API"]
 	path = UltiCode-Admin-API
 	url = git@github.com:DavidHLP/UltiCode-Admin-API.git
+	branch = main
+[submodule "UltiCode-Admin-Web"]
+	path = UltiCode-Admin-Web
+	url = git@github.com:DavidHLP/UltiCode-Admin-Web.git
+	branch = main
