refactor(project): 更新项目结构以支持管理后台API- 将所有模块的父项目ID从UltiCode更改为UltiCode-Admin - 更新根项目的名称和描述信息 - 在.gitmodules中添加UltiCode-Public-API子模块配置 - 统一调整各子模块的artifactId引用为UltiCode-Admin

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = UltiCode-Admin-Web
 	url = git@github.com:DavidHLP/UltiCode-Admin-Web.git
 	branch = main
+[submodule "UltiCode-Public-API"]
+	path = UltiCode-Public-API
+	url = git@github.com:DavidHLP/UltiCode-Public-API.git
+	branch = main
