feat(submodules): 添加 UltiCode-Public-Web 子模块新增 UltiCode-Public-Web 子模块配置，指向 github.com:DavidHLP/UltiCode-Public-Web.git 仓库，并设置默认分支为 main。此变更用于引入公共 Web 组件库作为项目子模块。

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = UltiCode-Public-API
 	url = git@github.com:DavidHLP/UltiCode-Public-API.git
 	branch = main
+[submodule "UltiCode-Public-Web"]
+	path = UltiCode-Public-Web
+	url = git@github.com:DavidHLP/UltiCode-Public-Web.git
+	branch = main
